# iot-capture

./: README.md
demo_esp32/: README.md  WiFiConfig.h.default
demo_esp32/drivers/: OS_default_driver.py  PubSubDriverDualMQTT-Lamp.py  PubSubDriverDualMQTT-Switch.py  simulated_OS_device.py
demo_esp32/pio-CameraWebServer/: platformio.ini
demo_esp32/pio-CameraWebServer_Original/: platformio.ini
demo_esp32/pio-Servo_Motor_Web_Server_Original/: platformio.ini
demo_esp32/pio-SmartThings_st_switch_replace_MQTT/: platformio.ini
demo_esp32/pio-Temperature_Humidity_WebServer/: platformio.ini
demo_esp32/pio-Temperature_Humidity_WebServer_Original/: platformio.ini
demo_esp32/pio-WiFi_Web_Server_Outputs/: platformio.ini
demo_esp32/pio-WiFi_Web_Server_Outputs_Original/: .gitignore  platformio.ini
demo_esp32/pio-WiFi_Web_Server_Sensor_Readings/: platformio.ini
device_setup/: Set up Raspberry Pi for WiFi AP.md
device_setup/vlan_ap_setup_pi/: README.md
macro-benchmark-controller/: README.md  gmailController.py  googleAPIController.py  googleSheetController.py  testSimpleRecipe.py
macro-benchmark-controller/webhook/: nginx-config.conf  run-remote.sh  webhook.ini  webhookCallback.py
macro-benchmark-controller/wemo/: __init__.py  wemoController.py  wemoNotificationController.py
macro-benchmark-esp32/pio-switch-event-sheet-custom-driver/: platformio.ini
macro-benchmark-esp32/pio-switch-event-sheet-original/: platformio.ini
macro-benchmark-esp32/pio-switch-webhook-original/: platformio.ini
macro-benchmark-rpi/: capture_drvier_api.py  light-device.py  light-driver.py  light.py  switch-device.py  switch-driver.py  switch.py
src/capture_core/: .gitignore  CMakeLists.txt  README.md  capture_monitor.cfg  config.h.in  install.sh
src/capture_core/lib/libconfig-1.7.2/: aclocal.m4  configure
src/capture_core/lib/libconfig-1.7.2/examples/c/: Makefile.in
src/capture_core/lib/libconfig-1.7.2/examples/c++/: Makefile.in
src/capture_core/lib/libconfig-1.7.2/lib/: Makefile.in
src/capture_core/lib/libconfig-1.7.2/tests/: Makefile.in
src/capture_core/lib/libconfig-1.7.2/tinytest/: Makefile.in
src/capture_core/src/: CMakeLists.txt  credential.h  crypto.cpp  crypto.hpp  dns.h  logger.cpp  logger.hpp  message.cpp  message.hpp  protocols.c  protocols.h  utils.cpp  utils.hpp  utils.tpp
src/capture_core/src/dreamcatcher/: dreamcatcher_config.c  dreamcatcher_config.h  dreamcatcher_main.c  dreamcatcher_main.h
src/capture_core/src/monitor/: device_client.cpp  device_client.hpp  monitor_main.cpp  monitor_main.hpp
src/capture_esp32/: BufferedRw.h  BufferedRw.ino  CaptureWiFi.h  CaptureWiFiClass.h  CaptureWiFiClass.ino  CaptureWiFiClient.h  CaptureWiFiClient.ino  CaptureWiFiServer.h  CaptureWiFiServer.ino  README.md  libcapture.h  libcapture.ino  libcapture_crypto.ino  libcapture_driver_message.h  libcapture_driver_message.ino  libcapture_exception.h  libcapture_globals.h  libcapture_monitor.ino  (+4 more)
(+119 files in other folders)
